--- a/examplePages/design.css
+++ b/examplePages/design.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   width: 100%;
-  font: 12pt Helvetica, sans-serif;
+  font: 13pt Helvetica, sans-serif;
 }
 p {
   margin: 0em;
@@ -13,27 +13,26 @@ p {
   transition: top 400ms ease-out;
   z-index: 100;
 }
-.menu-unfold {
-  top: 0px;
+.menu.menu_unfold {
+  top: 0px !important;
 }
 .header {
   height: 50px;
-  background: linear-gradient(#efefef, #dddddd);
-  font-size: 2em;
-  border-bottom: 1px solid #777777;
+  background: linear-gradient(#e6e6e6, #cccccc);
+  border-bottom: 1px solid #999999;
   text-align: center;
 }
 .but_back {
   width: 50px;
   height: 50px;
   float: left;
-  border-right: 1px solid #777777;
+  border-right: 1px solid #999999;
 }
 .but_menu {
   width: 50px;
   height: 50px;
   float: right;
-  border-left: 1px solid #777777;
+  border-left: 1px solid #999999;
 }
 .headertitle {
   margin: 0 50px;
@@ -46,7 +45,7 @@ p {
   left: 0px;
   top: 50px;
   vertical-align: middle;
-  border-bottom: 1px solid #777777;
+  border-bottom: 1px solid #999999;
   text-align: center;
   font-size: 2em;
 }
@@ -57,9 +56,8 @@ p {
 }
 .listitem {
   height: 50px;
-  background: linear-gradient(#ffffff, #eeeeee);
-  font-size: 2em;
-  border-bottom: 1px solid #777777;
+  background: linear-gradient(#ffffff, #e6e6e6);
+  border-bottom: 1px solid #999999;
   text-align: center;
 }
 @media only screen and (orientation: landscape), only screen and (min-device-width: 700px) {
