image position fix

--- a/examplePages/design.less
+++ b/examplePages/design.less
@@ -66,7 +66,7 @@ border-bottom: @border; text-align:center;}
 
 .racerdetail {height: @tile-height; border-bottom: @border; }
 .racerpic {height: 120px; width: 120px; margin: 15px; float: left; overflow: hidden; border-radius: 60px;}
-.racerpic img {height: 120px;}
+.racerpic img {height: 120px; margin-left: -10px;}
 .racer_number {.li_head;}
 
 @media only screen and (min-width: @col_max){
