--- a/core/html/design.css
+++ b/core/html/design.css
@@ -1,7 +1,181 @@
-<<<<<<< HEAD
-/* CSS crunched with Crunch - http://crunchapp.net/ */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video,input{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}.content_tab{max-width:600px}h1{color:#FFF;font-size:14px;text-align:center;padding:15px 0;background-color:#333;text-transform:uppercase}#registration{background-color:#fff;width:100%}.content_wrapper{padding:15px}.rider_picture{height:120px;width:120px;overflow:hidden;border-radius:25px}#registration>div>div.rider_picture>img{height:120px}.registration_values{margin-top:15px}input{display:block;font-size:14px;line-height:normal;border-bottom:1px solid #000;width:100%;padding:15px 0;color:black}input[type="submit"]{color:#FFF;margin-top:15px;border-radius:5px;border:none;background-color:#71C671;text-transform:uppercase}.menubuttons{color:#4d4d4d;min-width:49px;height:49px;border-right:1px solid #999;border-left:1px solid #999;cursor:default}p{margin:0em}body html{width:100%;height:100%}body{margin:0px;font:13pt Helvetica,sans-serif;color:#333}a.ohne{color:#4d4d4d;text-decoration:none}.menu{position:fixed;width:100%;top:-100px;transition:top 300ms ease-out;z-index:100}.menu.menu_unfold{top:0px !important}.header{height:49px;background:linear-gradient(#e6e6e6, #ccc);border-bottom:1px solid #999;text-align:center}div.title{display:inline;padding:0 25px}div.but_back{color:#4d4d4d;min-width:49px;height:49px;border-right:1px solid #999;border-left:1px solid #999;cursor:default;float:left;font-size:1.5em;line-height:1.5em}div.but_menu{color:#4d4d4d;min-width:49px;height:49px;border-right:1px solid #999;border-left:1px solid #999;cursor:default;float:right;font-size:2em}div.nav_button{float:right;cursor:default;margin:5px;padding:0.25em 5px;color:#4d4d4d;border:1px solid #999;border-radius:10px;display:none}div.nav_button:hover{background:#e6e6e6}.headertitle{display:inline}.content{position:absolute;max-width:700px;width:100%;height:100%;border-left:1px solid #999;border-right:1px solid #999;overflow-y:auto;transition:width 200ms ease, left 200ms ease}div.content0{position:absolute;max-width:700px;width:100%;height:100%;border-left:1px solid #999;border-right:1px solid #999;overflow-y:auto;transition:width 200ms ease, left 200ms ease;left:0%}div.content0.drilldown{left:-100%}div.content1{position:absolute;max-width:700px;width:100%;height:100%;border-left:1px solid #999;border-right:1px solid #999;overflow-y:auto;transition:width 200ms ease, left 200ms ease;left:100%}div.content1.drilldown{left:0%}div.content2{position:absolute;max-width:700px;width:100%;height:100%;border-left:1px solid #999;border-right:1px solid #999;overflow-y:auto;transition:width 200ms ease, left 200ms ease;left:200%}div.content2.drilldown{left:100%}div.content_menu_spacer{height:49px}.search{height:49px;border-bottom:1px solid #999;text-align:center}.listitem{height:49px;padding:0 5px;background:linear-gradient(#fff, #f2f2f2);border-bottom:1px solid #999;text-align:center}.li_head{margin:5px;font-size:2em;float:left;color:#999}.li_content{margin:5px;float:left;text-align:left}.li_secondline{color:#999}.listitem:hover{background:#fff}.racerdetail{height:149px;border-bottom:1px solid #999}.racerpic{height:120px;width:120px;margin:15px;float:left;overflow:hidden;border-radius:60px}.racerpic img{height:120px;margin-left:-10px}.racer_number{margin:5px;font-size:2em;float:left;color:#999}@media only screen and (min-width:700px){.content{width:50%}div.content0{width:50%}div.content0.drilldown{left:-50%}div.content1{width:50%;left:50%}div.content1.drilldown{left:0%}div.content2{width:50%;left:100%}div.content2.drilldown{left:50%}.header{padding-right:5px}div.but_menu{display:none}div.nav_button{display:block}}@media only screen and (min-width:2*700px){.content{width:33%}div.content0{width:33%}div.content1{width:33%;left:33%}div.content2{width:33%;left:66%;width:34%}.header{padding-right:5px}div.but_menu{display:none}div.nav_button{display:block}}
-=======
+/* CSS reset */
+/* CSS reset */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+input {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* End of CSS Reset*/
+/* gianfett temporary */
+.content_tab {
+  max-width: 600px;
+}
+h1 {
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+}
+h1.sub {
+  color: #cccccc;
+  text-transform: none;
+  font-size: 0.6em;
+}
+#registration {
+  background-color: #ffffff;
+  width: 100%;
+}
+.content_wrapper {
+  padding: 15px;
+}
+.rider_picture {
+  height: 120px;
+  width: 120px;
+  overflow: hidden;
+  border-radius: 25px;
+}
+#registration > div > div.rider_picture > img {
+  height: 120px;
+}
+.registration_values {
+  margin-top: 15px;
+}
+input {
+  display: block;
+  font-size: 14px;
+  line-height: normal;
+  border-bottom: 1px solid #000000;
+  width: 100%;
+  padding: 15px 0;
+  color: black;
+}
+input[type="submit"] {
+  color: #FFF;
+  margin-top: 15px;
+  border-radius: 5px;
+  border: none;
+  background-color: #71C671;
+  text-transform: uppercase;
+}
 .menubuttons {
   color: #4d4d4d;
   min-width: 44px;
@@ -37,14 +211,17 @@ a.ohne {
   top: 0px !important;
 }
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  z-index: 100;
   height: 44px;
-  background: linear-gradient(#e6e6e6, #cccccc);
+  background: #333333;
   border-bottom: 1px solid #999999;
   text-align: center;
 }
 div.title {
-  display: inline;
-  padding: 0 25px;
+  padding: 10px 25px;
 }
 div.but_back {
   color: #4d4d4d;
@@ -54,6 +231,7 @@ div.but_back {
   border-left: 1px solid #999999;
   cursor: default;
   float: left;
+  color: #cccccc;
   font-size: 1.5em;
   line-height: 1.5em;
 }
@@ -576,4 +754,3 @@ div.content_menu_spacer {
     left: 75%;
   }
 }
->>>>>>> FETCH_HEAD
