--- a/core/html/design.less
+++ b/core/html/design.less
@@ -66,19 +66,18 @@ table {
 @line-height: 44px;
 @tile-height: 149px;
 
-
+/* gianfett temporary */
 .content_tab {
     max-width: 600px;
 }
 
 h1 {
-    color: #FFF;
-    font-size: 14px;
+    color: @c1;
     text-align: center;
-    padding: 15px 0;
-    background-color: #333;
-    text-transform: uppercase;   
+    text-transform: uppercase;
 }
+
+h1.sub {color: @c3; text-transform: none; font-size: 0.6em;}
 
 #registration {
     background-color: @c1;
@@ -139,26 +138,17 @@ a.ohne {color: @c8; text-decoration: none;}
  transition: top 300ms ease-out; z-index: 100;}
 .menu.menu_unfold {top:0px !important;}
 
-.header {height:@line-height; background: linear-gradient(@c2, @c3); 
+.header {position:fixed; width: 100%; top:0px; z-index: 100;
+height:@line-height; background: @c9; 
 border-bottom: @border; text-align:center;}
 
-div.title {display: inline; padding: 0 25px;}
-div.but_back {.menubuttons; float:left; font-size: 1.5em; line-height: 1.5em;}
+div.title {padding: 10px 25px;}
+div.but_back {.menubuttons; float:left; color: @c3; font-size: 1.5em; line-height: 1.5em;}
 div.but_menu {.menubuttons; float:right; font-size: 2em;}
 .headertitle {display:inline;}
 
 .content() {position:absolute; min-width: 260px; width: @colw; height: 100%;
     border-left: @border; border-right: @border; overflow-y: auto;
-<<<<<<< HEAD
-    transition: width 200ms ease, left 200ms ease;} 
-div.content0 {.content; left: 0%;}
-div.content0.drilldown {left: -100%;}
-div.content1 {.content; left: 100%;}
-div.content1.drilldown {left: 0%;}
-div.content2 {.content; left: 200%;}
-div.content2.drilldown {left: 100%;}
-div.content_menu_spacer {height: @line-height;}
-=======
     transition: width 200ms ease, left 200ms ease; display: none;}
 .show() {display: block;}
 @colw: 100%;
@@ -180,7 +170,6 @@ div.content3.drilldown1 {.content; left: 2*@colw;}
 div.content3.drilldown2 {.content; left: @colw;}
 div.content3.drilldown3 {.content; .show; left: 0%;}
 div.content_menu_spacer {height: 55px;}
->>>>>>> FETCH_HEAD
 
 .search { height:@line-height; border-bottom: @border; text-align:center;}
 
